<resources>
    <string name="app_name">Nit Talk</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="signup">SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="invite_members">Invite Members</string>
    <string name="text_channels">TEXT CHANNELS</string>
    <string name="voice_channels">VOICE CHANNELS</string>
    <string name="message">Message</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="outgoing_requests">OutGoing Requests</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="groups">Groups</string>
    <string name="friend_chat">Friend Chat</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="create_account">Create Account</string>
    <string name="please_fill_the_input_below_here">Please Fill The Input Below Here</string>
    <string name="create">Create</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="search_your_friends_to_chat_with">Search Your Friends To Chat With</string>
    <string name="please_sign_in_to_continue">Please Sign In To Continue</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="save">Save</string>
    <string name="create_server_text">Your Server is Where you and your friends hang out. \n Make yours and start talking.</string>
    <string name="create_your_server">Create Your Server</string>
    <string name="server_name">Server Name</string>
    <string name="create_server">Create Server</string>
</resources>