<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.server.CreateServerFragment">

    <ImageView
        android:id="@+id/cancel_btn"
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:padding="15dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/create_server_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_server"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_btn" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create_server_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_server_textview" />

    <ImageView
        android:id="@+id/server_dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:padding="25dp"
        android:background="@drawable/shape_circle"
        android:backgroundTint="@color/light_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/remove_image_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:background="@drawable/shape_circle"
        android:backgroundTint="@color/button_color"
        android:src="@drawable/ic_cancel_request"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/server_dp"
        app:layout_constraintTop_toTopOf="@+id/server_dp" />

    <ProgressBar
        android:id="@+id/server_dp_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/server_dp"
        app:layout_constraintEnd_toEndOf="@+id/server_dp"
        app:layout_constraintStart_toStartOf="@+id/server_dp"
        app:layout_constraintTop_toTopOf="@+id/server_dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/server_name"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_black"
            android:hint="@string/server_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_server_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/create_server"
        android:backgroundTint="@color/button_color"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>